# urordo

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml  deploy-landing.yml
Final Resort/website/: README.md  app.js  downloads.json  index.html  styles.css
landing/: CLAUDE.md  index.html  package-lock.json  package.json
landing/src/: index.css
landing/src/pages/: LandingPage.tsx
scripts/: generate-icons.mjs  make.ps1
src/: App.jsx  index.css
src-tauri/: 2  Cargo.toml  license_public_key.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: contracts.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  classifier.rs  history.rs  ignore.rs  license.rs  mod.rs  organizer.rs  rollback.rs  scanner.rs  settings.rs  watcher.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/rules/: boundary.rs  folders.rs  launchers.rs  mod.rs  patterns.rs  projects.rs  resources.rs  system.rs
src/components/: ConfirmContext.jsx  ErrorBoundary.jsx  FolderSearchLogo.jsx  Sidebar.jsx  Skeleton.jsx  SplashScreen.jsx  TermsModal.jsx  ToastContext.jsx  Toggle.jsx
src/lib/: SettingsContext.jsx  contracts.js  planner.js  tauri.js
src/screens/: History.jsx  Inbox.jsx  Landing.jsx  Review.jsx  Settings.jsx  UpdatePrompt.jsx  Watchers.jsx
tracker/: wrangler.toml
tracker/src/: index.js
